added squared button and updated textPane background in motif